--- a/oo-analyzer/oo-analyzer-sdk/build.gradle
+++ b/oo-analyzer/oo-analyzer-sdk/build.gradle
@@ -8,4 +8,6 @@ dependencies {
 	
 	api 'org.apache.commons:commons-lang3:3.10'
 	api 'org.apache.commons:commons-text:1.8'
+	
+	api 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
 }
