--- a/oo-analyzer/build.gradle
+++ b/oo-analyzer/build.gradle
@@ -31,7 +31,7 @@ subprojects {
 		    manifest {
 		    	 attributes(
 		            'Implementation-Title': project.name,
-		            'Implementation-Version': project.version,
+		            'Implementation-Version': rootProject.version,
 		            'Implementation-Vendor': 'Luca Negrini',
 		            'Created-By': "Gradle ${gradle.gradleVersion}",
 		            'Built-By': System.properties['user.name'],
@@ -46,4 +46,25 @@ subprojects {
 		    }
 	    }
 	}
+	
+	if (it.plugins.hasPlugin('com.github.johnrengelman.shadow')) {
+        shadowJar.doFirst {
+		    manifest {
+		    	 attributes(
+		            'Implementation-Title': project.name,
+		            'Implementation-Version': project.version,
+		            'Implementation-Vendor': 'Luca Negrini',
+		            'Created-By': "Gradle ${gradle.gradleVersion}",
+		            'Built-By': System.properties['user.name'],
+		            'Build-Revision': repo.head().abbreviatedId,
+		            'Build-Tag': repo.describe(tags: true, always: true),
+					'Build-Branch': repo.branch.current().getName(),
+					'Build-Clean': repo.status().isClean(),
+		            'Build-Timestamp': new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
+		            'Build-Jdk': "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
+		            'Build-OS': "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}"
+		        )
+		    }
+	    }
+    }
 }
