Fixing warning message from log4j in fat-jar execution

--- a/oo-analyzer/build.gradle
+++ b/oo-analyzer/build.gradle
@@ -51,6 +51,7 @@ subprojects {
         shadowJar.doFirst {
 		    manifest {
 		    	 attributes(
+		    	 	"Multi-Release": true,
 		            'Implementation-Title': project.name,
 		            'Implementation-Version': project.version,
 		            'Implementation-Vendor': 'Luca Negrini',
